# moritz

./: .gitignore  README  configure.ac
lib/: ASS_Data.cpp  ASS_Data.h  ASS_Model.h  ASS_Model.hpp  ASS_Visitor.h  ASS_Visitor.hpp  Association.h  Association.hpp  AssociationFellowship.h  AssociationFellowship.hpp  AssociationSponsor.h  AssociationSponsor.hpp  Debug_Reaction.cpp  Debug_Reaction.h  LogOutput.cpp  LogOutput.h  Makefile.am  Spirit185_Data.cpp  Spirit185_Data.h  Spirit185_External.cpp  Spirit185_External.h  Spirit185_Filter.cpp  Spirit185_Filter.h  Spirit185_Internal.cpp  Spirit185_Internal.h  Spirit185_Property.cpp  Spirit185_Property.h  Spirit185_Store.cpp  Spirit185_Store.h  Spirit185_Xml.cpp  Spirit185_Xml.h  StringC_help.h  String_imp.cpp  String_imp.h  TDA_GrmAbstract.cpp  TDA_GrmAbstract.h  TDA_GrmConcrete.cpp  TDA_GrmConcrete.h  TDA_Notation.cpp  TDA_Notation.h  (+92 more)
src/: Makefile.am  abc2xml.cpp  xml2abc.cpp
