
lib_SOURCES = \
	ASS_Data.cpp \
	Debug_Reaction.cpp \
	LogOutput.cpp \
	Spirit185_Data.cpp \
	Spirit185_External.cpp \
	Spirit185_Filter.cpp \
	Spirit185_Internal.cpp \
	Spirit185_Property.cpp \
	Spirit185_Store.cpp \
	Spirit185_Xml.cpp \
	String_imp.cpp \
	TDA_GrmAbstract.cpp \
	TDA_GrmConcrete.cpp \
	TDA_Notation.cpp \
	TiPa_Abstract.cpp \
	TiPa_Character.cpp \
	TiPa_Combination.cpp \
	TiPa_Concrete.cpp \
	TiPa_Counter.cpp \
	TiPa_Data.cpp \
	TiPa_DataModel.cpp \
	TiPa_Reaction_Abstract.cpp \
	TiPa_Reaction_Concrete.cpp \
	TiPa_Result.cpp \
	TiPa_Result_Abstract.cpp \
	TiPa_Result_Collector.cpp \
	TiPa_Result_Skip.cpp \
	TiPa_Result_Terminate.cpp \
	TiPa_Rule.cpp \
	TiPa_Search.cpp \
	TiPa_String.cpp \
	app_tool.cpp \
	tinyprsr.cpp \
	xml_Data.cpp \
	xml_DataModel.cpp \
	xml_Load.cpp \
	xml_Node.cpp \
	xml_Parser.cpp \
	xml_Replace.cpp \
	xml_Replace_Grm.cpp \
	xml_Save.cpp \
	xml_Search.cpp \
	xml_Tree.cpp \
\
	coreflow.cpp \
	expression.cpp \
	merge.cpp \
	trn_comment.cpp \
	trn_context.cpp \
	trn_directive.cpp \
	trn_line.cpp \
	trn_source.cpp \
\
	cmnd_dict_xml.cpp \
	cmnd_parser.cpp \
	cmnd_srcdata.cpp \
	cmnd_stack_strg.cpp \
	command.cpp \
	gen_nsd.cpp \
	transform.cpp \
	snippet.cpp

noinst_LIBRARIES = libhelper.a
libhelper_a_SOURCES = $(lib_SOURCES)

AM_CPPFLAGS = -I.
AM_CFLAGS =
AM_CXXFLAGS = -std=c++11
AM_LDFLAGS = -L.

LIBADD =
LDADD =
